update style on front end

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
 
 .film_inner_box {
   background-color: #f7f7f7;
+  border: 1px solid #f7f7f7;
+  border-radius: 5px;
+  height: 100%;
   padding: 10px;
 }
 
